<resources>
    <string name="app_name">HogeschoolGame</string>

    <string name="Titel">Mediatechnology entrepeneur</string>
    <string name="action_settings">Settings</string>




    <string name="scanButton">Start Scan</string>
    <string name="ScoreButton">ScoreBoard</string>
    <string name="battleButton">Battle WIP</string>
    <string name="DebugButton">Clear List</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="SkillsButton">Vaardigheden</string>
    <string name="ScoreOphalen">Score Ophalen</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_skills_list">Skills</string>
    <string name="title_skills_detail">Skills Detail</string>
    <string name="title_activity_table_activitity">TableActivitity</string>



</resources>
